# libccg

./: .clang-format  .gitignore  Makefile.am  README.md  configure.ac
src/: adt.h  dict.c  dict.h  foo.c  foo.h  list.c  list.h  map.h  mem.c  mem.h  point.c  point.h  point2d.c  point2d.h  polyline.h  pqueue.c  pqueue.h  pqueue_heap.c  voronoi.c  voronoi.h
src/adt/: dict.c  dict.h  list.c  pqueue.c
src/voronoi/: ev_circ.h  ev_site.h
test/: dict_test.c  foo_test.c  libccg_test.c  libccg_test.h  list_test.c  point2d_test.c  point_test.c  pqueue_heap_test.c  pqueue_test.c  voronoi_test.c
test/adt/: dict_test.c  list_test.c  pqueue_test.c
